--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-streamlit
-numpy
-Pillow
-matplotlib
-joblib
-scikit-learn
-streamlit-drawable-canvas
-tensorflow
-opencv-python-headless
-gdown
-
-
+streamlit==1.32.0
+numpy==1.26.0
+Pillow==10.0.0
+matplotlib==3.8.0
+joblib==1.3.2
+scikit-learn==1.3.0
+streamlit-drawable-canvas==0.9.0
+tensorflow==2.15.0
+opencv-python-headless==4.8.0.76
+gdown==4.7.1
+h5py==3.10.0
