--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 streamlit
-streamlit-drawable-canvas
 numpy
+Pillow
+matplotlib
+scikit-learn
+streamlit-drawable-canvas
 opencv-python-headless
 gdown
-matplotlib
